arregle unas lineas de codigos

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,7 +10,7 @@
 
 
 
-/* MODELOS ADAPTADOS VISTA MOBILE EN EL INDEX Y NOTEBOOKS*/
+/* MODELOS ADAPTADOS VISTA MOBILE */
 
 
 @media (max-width: 480px){
