--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,8 @@
 
 /* MODELOS ADAPTADOS VISTA MOBILE */
 
-@media (max-width: 480px){
+@media (max-width: 576px)
+{
     .imagen-uno{
         display: none;
     }
@@ -18,20 +19,34 @@
         width: 100%;
         height: auto;
     }
-}
-@media (max-width: 480px){
+/* Imagen del logo */
+    .logotipo{
+        display: flex;
+        justify-content: center;
+        }
+/* Barra de busqueda*/
+    .form-control{
+        width: 450px;
+    }
+/* Index */
     .card-articulo{
-        margin-left: 0;
+        margin-left: 45px;
     }
-
-    form {
+/* Footer */  
+    .contenedor{
+        display: flex;
         flex-direction: column;
+        text-align: center;
     }
-    .tarjeta{
-        width: 300px;
-        margin-left: 0;
-        
-    } 
-
-
+/* pagina contacto */
+    .info-dos h4{
+        font-size: 30px;
+    }
+    section div h6{
+        font-size: 15px;
+    }
+    main .cuadro{
+        height: 470px;
+        width: 520px;
+    }
 }
