--- a/scss/_main-index.scss
+++ b/scss/_main-index.scss
@@ -1,5 +1,7 @@
 /*  MAIN INDEX */
 
+@import "mixins";
+
 main 
 { 
     section div
@@ -18,8 +20,7 @@ main
         {
             text-decoration: underline;
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            margin-top: 100px;
-            margin-bottom: 50px;
+            @include margin (100px , 50px);
         }
         div
         {
