--- a/scss/_generales.scss
+++ b/scss/_generales.scss
@@ -2,12 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora&family=Montserrat:wght@100&family=Playfair+Display:ital,wght@1,600&display=swap');
 
+@import "variables";
+
 *{
-    font-family: 'Lora', serif;
-    font-family: 'Montserrat', sans-serif;
+    font-family: $font;
     box-sizing: border-box;
 }
 
 body{
-    background-color: white;
+    background-color: $fondo;
 }
