--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,7 +11,7 @@ header
         {
             .img-uno
                 {
-                    @include tamaño (200px, 100px , 20px);
+                    @include tamaño (200px, 100px , 8%);
                 }
         }
         
