--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -9,24 +9,43 @@ footer{
     .contenedor 
     {
         @include contenedor (flex , space-around);
-    }
-    h3
-    {
-    text-decoration:underline;
-    font-family:serif;
-    }
-    .cliente
-    {
-        color: white;
-        justify-content: flex-start;
-        flex-direction: column;
-        margin-top: 20px;
-    }
-    .horario
-    {
-        color: white;
-        flex-direction: column;
-        align-items: end;
-        margin-top: 20px;
-    }
+        align-items: center;
+        .cliente
+        {
+            color: white;
+            justify-content: flex-start;
+            flex-direction: column;
+            margin-top: 20px;
+            h3
+            {
+                text-decoration:underline;
+                font-family:serif;
+            }
+        }
+        .horario
+        {
+            h3{
+                text-decoration:underline;
+                font-family:serif;
+            }
+            color: white;
+            flex-direction: column;
+            align-items: end;
+            margin-top: 20px;
+        }
+        .redes-sociales
+        {
+            h3{
+                text-decoration:underline;
+                font-family:serif;
+                color: white;
+            }
+            a{
+                img{
+                    margin-left: 40px;
+                    margin-top: 10px;
+                }
+            }
+        }
+    }    
 }
