--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,6 +11,16 @@
 
 @media (max-width: 576px)
 {
+    *{
+        padding:0;
+        margin:0;
+    }
+    .producto{
+        text-align: center;
+    }
+    .tarjeta{
+        margin-bottom: 20px;
+    }
     .imagen-uno{
         display: none;
     }
@@ -32,7 +42,11 @@
     .card-articulo{
         margin-left: 45px;
     }
-/* Footer */  
+/* Footer */
+    footer{
+        width: 100%;
+        font-size: 14px;
+    }
     .contenedor{
         display: flex;
         flex-direction: column;
@@ -40,13 +54,14 @@
     }
 /* pagina contacto */
     .info-dos h4{
-        font-size: 30px;
+        font-size: 30px !important;
     }
     section div h6{
-        font-size: 15px;
+        font-size: 15px !important;
     }
-    main .cuadro{
-        height: 470px;
-        width: 520px;
+    .info-dos{
+        height:auto !important;
+        width: auto !important;
+        margin-right: 2% !important;
     }
 }
